--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sygnas/simple-audio-player",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Play and stop only audio player.",
   "main": "dist/simple-audio-player.js",
   "module": "dist/simple-audio-player.es.js",
@@ -28,22 +28,20 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "rollup": "^0.52.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
+    "eslint": "^4.17.0",
+    "rollup": "^0.55.3",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.3.1"
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "dependencies": {
-    "@sygnas/audio-src": "^1.1.0"
+    "@sygnas/audio-src": "^1.1.1"
   }
 }
